Fix api not finding impl